2018-01-13  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by David Mosberger-Tang
	patch #8924: Enable TPI for usbtiny
	* usbtiny.c: Extend to handle TPI targets
	* configure.ac: Probe for <netinet/in.h>

2018-01-12  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by Yegor Yefremov:
	patch #9222: Enable silent build
	* configure.ac: Add AM_SILENT_RULES
	* Makefile.am: Document how to run "make" to get verbose
	build messages

2018-01-12  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by: Kjetil Kjeka:
	patch #9317: Support atmega64m1 as part
	* avrdue.conf.in (ATmega64M1): New entry.

2018-01-12  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by Submitted David Griffith:
	patch #9530: Update URL to Ladyada's USBtinyISP page.
	* avrdude.conf.in (usbtiny): Update URL

2018-01-12  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by Milan Kupcevic:
	patch #9423: Support ATtiny841 and ATtiny441
	bug #47376: ATtiny841 description missing in configuration file
	bug #49455: support for tiny441
	* avrdude.conf.in (ATtiny841, ATtiny441): New entries

2018-01-10  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by Morten Engelhardt Olsen
	patch #9506: Script to create device configuration stub from Atmel ATDF files
	* tools/atdf-to-avrdude.xslt: New script

2018-01-10  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by Jan Egil Ruud <janegil.ruud@microchip.com>
	patch #9507: Fix UPDI chip erase
	* lexer.l (family_id): New keyword.
	* config_gram.y: (Ditto)
	* doc/avrdude.texi: Document new keyword
	* avrdude.conf.in: Add family_id for avr8x devices
	* avr.c: Pass error code up.
	* jtag3.c: Pass error code from memory read up; implement
	jtag3_read_sib()
	* libavrdude.h: Add new items.
	* main.c: Implement different chip erase handling required
	for UPDI devices.

2018-01-10  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by Jan Egil Ruud <janegil.ruud@microchip.com>
	patch #9506: Script to create device configuration stub from Atmel ATDF files